testdata/003-invalid-head.stderr
error: invalid version declaration (line=1 col=1)
  #!/usr/bin/env lolcode
  ^
