testdata/003-invalid-head.lol
#!/usr/bin/env lolcode

HAI 1.2
KTHXBYE
